--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,80 @@
-# Django==4.1
-# numpy==1.23.5
-# Pillow==9.4.0
-# tensorflow==2.12.0
-# aiohttp==3.8.4
-
-Django~=4.2.7
-numpy~=1.26.1
-Pillow~=10.1.0
-tensorflow~=2.14.0
-aiohttp
-
-keras~=2.14.0
-joblib~=1.3.2
-scikit-learn~=1.3.2
-pandas~=2.1.2
+absl-py==2.0.0
+aiohttp==3.8.6
+aiosignal==1.3.1
+asgiref==3.7.2
+astunparse==1.6.3
+async-timeout==4.0.3
+attrs==23.1.0
+avro==1.11.1
+bcrypt==4.0.1
+cachetools==5.3.0
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+cryptography==40.0.2
+distlib==0.3.7
+Django==4.2.7
+filelock==3.13.1
+flatbuffers==23.5.26
+frozenlist==1.4.0
+gast==0.5.4
+google-api-core==2.11.0
+google-auth==2.17.1
+google-auth-oauthlib==1.0.0
+google-cloud-pubsub==2.15.2
+google-pasta==0.2.0
+googleapis-common-protos==1.59.0
+grpc-google-iam-v1==0.12.6
+grpcio==1.53.0
+grpcio-status==1.53.0
+gunicorn==21.2.0
+h5py==3.10.0
+idna==3.4
+joblib==1.3.2
+keras==2.14.0
+kubernetes==10.0.1
+libclang==16.0.6
+Markdown==3.5.1
+MarkupSafe==2.1.3
+maskpass==0.3.7
+ml-dtypes==0.2.0
+multidict==6.0.4
+numpy==1.26.2
+oauthlib==3.2.2
+opt-einsum==3.3.0
+packaging==23.2
+pandas==2.1.3
+Pillow==10.1.0
+platformdirs==3.11.0
+proto-plus==1.22.2
+protobuf==4.22.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+pycryptodome==3.17
+pynput==1.7.6
+python-dateutil==2.8.2
+pytz==2023.3.post1
+PyYAML==6.0.1
+requests==2.28.2
+requests-oauthlib==1.3.1
+rsa==4.9
+scikit-learn==1.3.2
+scipy==1.11.3
+six==1.16.0
+sqlparse==0.4.4
+tensorboard==2.14.1
+tensorboard-data-server==0.7.2
+tensorflow-estimator==2.14.0
+tensorflow-intel==2.14.1
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.3.0
+threadpoolctl==3.2.0
+typing_extensions==4.8.0
+tzdata==2023.3
+urllib3==1.26.15
+virtualenv==20.24.6
+websocket-client==1.6.4
+Werkzeug==3.0.1
+wrapt==1.14.1
+yarl==1.9.2
